--- a/Contact.html
+++ b/Contact.html
@@ -237,7 +237,7 @@
                   </a>
                   <a href="https://www.kvk.nl/?msclkid=00375686845f19489e8b33d12c91ef91&amp;utm_source=bing&amp;utm_medium=cpc&amp;utm_campaign=KVK%20-%20Branded&amp;utm_term=www%20kvk%20nl&amp;utm_content=kvk%20www" class="u-active-none u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-top-left-radius-0 u-top-right-radius-0 u-btn-1" target="_blank">&nbsp;KVK-nummer: 87795043</a>
                   <img class="u-image u-image-default u-preserve-proportions u-image-3" src="images/logokvk.jpg" alt="" data-image-width="200" data-image-height="200">
-                  <a href="tel:0684511980" class="u-active-none u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-top-left-radius-0 u-top-right-radius-0 u-btn-2"> &nbsp;+31 6 84 51 19 80&nbsp;</a><span class="u-file-icon u-icon u-icon-1"><img src="images/10821122.png" alt=""></span>
+                  <a href="tel:0687513536" class="u-active-none u-bottom-left-radius-0 u-bottom-right-radius-0 u-btn u-btn-rectangle u-button-style u-hover-none u-none u-radius-0 u-top-left-radius-0 u-top-right-radius-0 u-btn-2"> &nbsp;+31 6 87513536&nbsp;</a><span class="u-file-icon u-icon u-icon-1"><img src="images/10821122.png" alt=""></span>
                 </div>
               </div>
             </div>
